testsuite/tests/linear/should_fail/LinearNoExtU.hs
{-# LANGUAGE UnicodeSyntax #-}
module LinearNoExtU where

type T a = a ⊸ a
