testsuite/tests/linear/should_fail/LinearNoExtU.stderr

LinearNoExtU.hs:4:14: error:
    Enable LinearTypes to allow linear functions
